SVGDocument getElementById returns null when svg element is disconnected from documents https://bugs.webkit.org/show_bug.cgi?id=151969

Reviewed by Chris Dumez.

Fixed the bug that SVGSVGElement.prototype.getElementById could not find an element of
a given ID if its subtree is disconnected from documents. New behavior matches the spec
as well as the behaviors of Gecko & Blink:
https://www.w3.org/TR/SVG2/struct.html#__svg__SVGSVGElement__getElementById

* LayoutTests/svg/dom/getElementsById-in-disconnected-svg-expected.txt: Added.
* LayoutTests/svg/dom/getElementsById-in-disconnected-svg.html: Added.
* Source/WebCore/svg/SVGSVGElement.cpp:
(WebCore::SVGSVGElement::getElementById): Fixed the bug.

Canonical link: https://commits.webkit.org/252478@main